
- with and as are now keywords.

- Bug #1664966: Fix crash in exec if Unicode filename can't be decoded.

- Issue #1537: Changed GeneratorExit's base class from Exception to
  BaseException.

- Fix Issue #1703448: A joined thread could show up in the
  threading.enumerate() list after the join() for a brief period until
  it actually exited.

Library
-------

- #1221598: add optional callbacks to ftplib.FTP's storbinary() and
  storlines() methods.  (Contributed by Phil Schwartz)

- #1715: include sub-extension modules in pydoc's text output.

- #1836: fix an off-by-one bug in TimedRotatingHandler's rollover
  time calculation.

- #1021: fix a bug to allow basicConfig to accept NOTSET as a level.

- #932563: add LoggerAdapter convenience class to make it easier to add
  contextual information in logging output.

- #1760556: fix a bug to avoid FileHandler throwing an exception in
  flush().

- Bug #1530959: distutils' build command now uses different build directory
  when building extension modules against versions of Python compiled
  with ``--with-pydebug``.

- #1555501: move plistlib from plat-mac directory to general library.

- #1269: fix a bug in pstats.add_callers() and add a unit test file for
  pstats.

- #1669: don't allow shutil.rmtree() to be called on a symlink to a
  directory.

- #1664522: in urllib, don't read non-existing directories in ftp mode,
  returning a 0-byte file -- raise an IOError instead.

- #856047: respect the ``no_proxy`` environment variable when using the
  ``http_proxy`` etc. environment variables in urllib.

- #1178141: add a getcode() method to the addinfourls that urllib.open()
  returns so that you can retrieve the HTTP status code.

- Issue #1003: Fix zipfile decryption check, it would fail zip files
  with extended local headers.

- #1189216: Fix the zipfile module to work on archives with headers
  past the 2**31 byte boundary.

- #1336: fix a race condition in subprocess.Popen if the garbage