@@ -18,7 +18,7 @@ There are only a few functions special to module objects.
    is exposed to Python programs as ``types.ModuleType``.
 
 
-.. cfunction:: int PyModule_Check(PyObject *p)
+.. cmacro:: int PyModule_Check(PyObject *p)
 
    Return true if *p* is a module object, or a subtype of a module object.
 
@@ -26,7 +26,7 @@ There are only a few functions special to module objects.
       Allowed subtypes to be accepted.
 
 
-.. cfunction:: int PyModule_CheckExact(PyObject *p)
+.. cmacro:: int PyModule_CheckExact(PyObject *p)
 
    Return true if *p* is a module object, but not a subtype of
    :cdata:`PyModule_Type`.
@@ -103,3 +103,19 @@ There are only a few functions special to module objects.
    null-terminated.  Return ``-1`` on error, ``0`` on success.
 
    .. versionadded:: 2.0
+
+.. cmacro:: int PyModule_AddIntMacro(PyObject *module, macro)
+
+   Add an int constant to *module*. The name and the value are taken from 
+   *macro*. For example ``PyModule_AddConstant(module, AF_INET)`` adds the int
+   constant *AF_INET* with the value of *AF_INET* to *module*.
+   Return ``-1`` on error, ``0`` on success.
+
+   .. versionadded:: 2.6
+
+.. cmacro:: int PyModule_AddStringMacro(PyObject *module, macro)
+
+   Add a string constant to *module*.
+
+  .. versionadded:: 2.6
+
