@@ -129,7 +129,7 @@ mmap_object_dealloc(mmap_object *m_obj)
 	}
 #endif /* UNIX */
 
-	PyObject_Del(m_obj);
+	m_obj->ob_type->tp_free((PyObject*)m_obj);
 }
 
 static PyObject *
